@@ -1,3 +1,8 @@
+2009-03-31  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plugins/opensubtitles/opensubtitles.py: Sort the languages
+	in the combo box (Closes: #577366)
+
 2009-03-24  Christian Persch  <chpe@gnome.org>
 
 	* src/totem-session.c: (totem_session_restore):
